--- a/package.json
+++ b/package.json
@@ -4,26 +4,59 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
-    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "test": "jasmine-ts",
-    "tsc": "tsc"
+    "start": "cross-env NODE_ENV=prod node dist/server.js",
+    "watch": "cross-env NODE_ENV=dev concurrently \"tsc --watch\" \"nodemon",
+    "build": "yarn clean && tsc",
+    "pretest": "yarn setup:test:db && yarn build",
+    "test": "cross-env NODE_ENV=test ts-node ./node_modules/jasmine/bin/jasmine",
+    "clean": "rm -rf dist",
+    "migrate:up": "npx db-migrate up",
+    "migrate:down": "npx db-migrate down",
+    "migrate:reset": "npx db-migrate reset",
+    "setup:test:db": "npx db-migrate reset -e test && npx db-migrate up -e test",
+    "tsc": "tsc",
+    "lint": "npx eslint . --ext .ts"
   },
-  "author": "Udacity",
+  "author": "Tosin Akinyele",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
-    "@types/pg": "^7.14.7",
-    "express": "^4.17.1",
+    "@types/pg": "^7.14.9",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "db-migrate": "^0.11.12",
+    "db-migrate-pg": "^1.2.2",
+    "debug": "^4.3.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1",
     "typescript": "^4.1.3",
-    "pg": "^8.5.1"
+    "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/debug": "^4.1.5",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.28",
+    "@types/request": "^2.48.5",
+    "@types/validator": "^13.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
-    "jasmine-ts": "^0.3.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9"
   }
