--- a/env.example
+++ b/env.example
@@ -5,13 +5,6 @@ DEV_DATABASE=
 DEV_PORT=
 DEV_DRIVER=pg
 
-PROD_HOST=
-PROD_USER=
-PROD_PASSWORD=
-PROD_DATABASE=
-PROD_PORT=
-PROD_DRIVER=pg
-
 TEST_HOST=
 TEST_USER=
 TEST_PASSWORD=
@@ -22,3 +15,4 @@ TEST_DRIVER=pg
 SECRET_KEY=
 SALT=
 PORT=5000
+DATABASE_URL
