--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=prod node dist/server.js",
     "watch": "cross-env NODE_ENV=dev concurrently \"tsc --watch\" \"nodemon",
+    "dev": "nodemon",
     "build": "yarn clean && tsc",
     "pretest": "yarn setup:test:db && yarn build",
     "test": "cross-env NODE_ENV=test ts-node ./node_modules/jasmine/bin/jasmine",
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.9",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -31,14 +33,18 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
+    "js2xmlparser": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "typescript": "^4.1.3",
-    "validator": "^13.5.2"
+    "validator": "12.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.33",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/jasmine": "^3.6.3",
